--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,11 @@
 
 body {
   font-family: "Open Sans", sans-serif;
+  font-size: 14px;
   margin: 0;
 }
-header, main, footer {
-  padding: 5px 200px;
-}
 header, footer {
+  padding: 5px 200px;
   background: #ffc23f;
 }
 #root {
@@ -17,17 +16,49 @@ header, footer {
 }
 
 p { margin: 5px 0; }
+input, button, select, textarea {
+  font-size: 14px;
+  box-sizing: border-box;
+}
+
+div, button {
+  border-radius: 10px;
+}
+.primary {
+  background: #0072ce;
+  color: #fff;
+}
 
 main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
   text-align: center;
+  padding: 16px 200px;
+  gap: 8px;
+}
+
+.order-controls {
+  display: flex;
+  justify-content: space-between;
+}
+
+.error {
+  color: red;
+}
+
+.space-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 
 @media screen and (max-width: 1024px) {
   header, main, footer {
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 50px;
+    padding-right: 50px;
   }
 }
 
