--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,50 @@
-header img {
+header {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+header img { height: 35px; }
+
+#nav-toggle { display: none; }
+label[for="nav-toggle"] {
+    display: none;
+    position: absolute;
+    background: #0072ce;
+    right: 8px;
+    top: 5px;
+    width: 35px;
     height: 35px;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 8px;
+}
+nav li {
+    width: 100%;
+}
+nav li button {
+    border: 0;
+    border-radius: 0;
+    padding: 5px;
+}
+
+
+@media screen and (max-width: 600px) {
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav { width: 100%; }
+    label[for="nav-toggle"] { display: block; }
+    nav ul {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+    }
+    nav:has(> :checked) ul { display: flex; }
 }
