--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://unpkg.com/spectre.css/dist/spectre-icons.min.css");
 
+:root {
+  --vertical-margin: 5px;
+  --primary-color: #0072ce;
+  --primary-color-hover: #2780c9;
+  --border-radius: 10px;
+}
 body {
   font-family: "Open Sans", sans-serif;
   font-size: 14px;
   margin: 0;
-}
-header, footer {
-  padding: 5px 200px;
-  background: #ffc23f;
 }
 #root {
   display: flex;
@@ -15,18 +18,33 @@ header, footer {
   min-height: 100vh;
 }
 
-p { margin: 5px 0; }
-input, button, select, textarea {
-  font-size: 14px;
-  box-sizing: border-box;
+header, footer {
+  padding: 0 200px;
+  background: #ffc23f;
 }
 
-div, button {
-  border-radius: 10px;
+p { margin: var(--vertical-margin) 0; }
+
+div {
+  border-radius: var(--border-radius);
 }
-.primary {
-  background: #0072ce;
+
+button, select, input, textarea {
+  font-size: 14px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: var(--border-radius);
+}
+button {
+  cursor: pointer;
+  border: none;
+}
+button.primary, nav li > button {
+  background: var(--primary-color);
   color: #fff;
+}
+button.primary:hover, nav li > button:hover {
+  background: var(--primary-color-hover);
 }
 
 main {
@@ -43,9 +61,7 @@ main {
   justify-content: space-between;
 }
 
-.error {
-  color: red;
-}
+.error { color: red; }
 
 .space-between {
   display: flex;
