--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,20 +1,15 @@
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     position: relative;
 }
-header img { height: 35px; }
+header img {
+    height: 35px;
+    margin: var(--vertical-margin) 0;
+}
 
 #nav-toggle { display: none; }
-label[for="nav-toggle"] {
-    display: none;
-    position: absolute;
-    background: #0072ce;
-    right: 8px;
-    top: 5px;
-    width: 35px;
-    height: 35px;
-}
 
 nav ul {
     display: flex;
@@ -22,29 +17,45 @@ nav ul {
     padding: 0;
     margin: 0;
     gap: 8px;
+    height: 100%;
 }
 nav li {
     width: 100%;
 }
-nav li button {
+nav li > button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 5px;
     border: 0;
     border-radius: 0;
-    padding: 5px;
+    padding: 10px 5px;
+    height: 100%;
 }
 
 
 @media screen and (max-width: 600px) {
-    header {
+    /*header {
         flex-direction: column;
         align-items: flex-start;
     }
 
     nav { width: 100%; }
-    label[for="nav-toggle"] { display: block; }
     nav ul {
         display: none;
         flex-direction: column;
         align-items: center;
     }
     nav:has(> :checked) ul { display: flex; }
+    nav li button {
+        flex-direction: row;
+    }*/
+    nav li > button {
+        padding: 10px;
+        height: 100%;
+    }
+    nav button span {
+        display: none;
+    }
 }
