Mejorar aspecto de modals

--- a/src/components/OrderList/OrderList.css
+++ b/src/components/OrderList/OrderList.css
@@ -1,6 +1,6 @@
 .order-list {
     display: table;
-    border-radius: var(--border-radius);
+    border-radius: 0;
 }
 .order-list > div {
     display: table-row;
