--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -26,31 +26,16 @@ nav li > button {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     gap: 5px;
     border: 0;
     border-radius: 0;
-    padding: 10px 5px;
+    padding: 10px;
+    width: 100%;
     height: 100%;
 }
 
 
 @media screen and (max-width: 600px) {
-    /*header {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    nav { width: 100%; }
-    nav ul {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-    }
-    nav:has(> :checked) ul { display: flex; }
-    nav li button {
-        flex-direction: row;
-    }*/
     nav li > button {
         padding: 10px;
         height: 100%;
