--- a/src/components/OrderList/OrderList.css
+++ b/src/components/OrderList/OrderList.css
@@ -1,15 +1,52 @@
 .order-list {
-    display: table;
-    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow: hidden;
 }
-.order-list > div {
-    display: table-row;
+
+.order-list-header, .order {
+    display: grid;
+    grid-template-columns: 1fr 2fr 2fr 1fr 1fr;
 }
-.order-list > div > p {
-    display: table-cell;
+.order-list-header p , .order > * {
+    padding: 12px 16px;
 }
-.order-list > div > p:first-child {
-    font-weight: bold;
+
+.order-list-header {
+    background: #e9e9e9;
+}
+.order-list-header p {
+    font-weight: 600;
+    color: #202020;
+    text-align: left;
+    white-space: nowrap;
+}
+
+.order-list-rows {
+    flex: 1;
+    overflow-y: auto;
+}
+
+/* varying background by index */
+.order-list-rows .order:nth-child(odd) {
+    background-color: #fcfcfc;
+}
+.order-list-rows .order:nth-child(even) {
+    background-color: #fff;
+}
+
+@media (max-width: 600px) {
+    .order-list-header {
+        display: none;
+    }
+
+    .order {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .order > :last-child {
+        grid-column: 1 / span 2;
+    }
 }
 
 .order-list:has(.order-list-empty) {
@@ -17,5 +54,4 @@
     justify-content: center;
     align-items: center;
     border: dashed 3px #ccc;
-    flex: 1;
 }
